# XTagger

./: .gitignore  .travis.yml  README.md  model_epoch_class.hdf5
Env/: environment.yml  environment_cpu.yml  environment_gpu.yml  packages_cpu.pip  packages_gpu.pip  setupEnv.sh  setupEnvCPU.sh  setupEnvFull.sh
Ops/: CMakeLists.txt  ClassificationWeights.cc  FakeBackground.cc  FindROOT.cmake  FindTensorFlow.cmake  Resampler.cc  RootMutex.h  RootReader.cc  RootWriter.cc  __init__.py  classification_weights.py  fake_background.py  resampler.py  root_reader.py  root_writer.py
Tests/Env/: testKeras.py  testSetupCpuEnv.sh  testSetupEnv.sh  testSetupFullEnv.sh
Tests/Ops/: buildOps.sh
Tests/Training/: Training.sh
Tests/Unpacker/: testUnpacker.sh
Training/: convert_to_const_graph.py  convert_to_const_graph_da.py  evaluation_test.py  feature_dict.py  feature_dict_da.py  llp_model_da.py  llp_model_simple.py  no_lstm.py  nominal_model.py  plot_macros.py  root_style.py  style.py  training.py  training2.py  training_da.py
Training/xtools/: AttentionNetwork.py  BigConvNetwork.py  DeepSetNetwork.py  Devices.py  FeaturePlotter.py  InputFiles.py  NominalNetwork.py  NominalNetworkDeep.py  Pipeline.py  ResampleWeights.py  __init__.py  setupLogging.py  style.py
Unpacker/: CMakeLists.txt  FindROOT.cmake  cmdParser.hpp  test-files.txt  unpackNanoX.cc  unpackNanoXFast.cc
hdf5_batches/: batch1.h5  batch2.h5  hdf5_list.txt
